--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
             <div class="hero-visual-sub">Current Line-up</div>
             <ul class="hero-visual-lineup">
               <li><span>Vo</span>AKIRA</li>
-              <li><span>Gt</span>DOLL＄SAW</li>
+              <li><span>Gt</span>Doll§aw</li>
               <li>A future metal band based in Tokyo.</li>
             </ul>
           </div>
