--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background-image: url("https://i.imgur.com/lnJav94.jpeg");
+      background-image: url("https://imgur.com/a/6Zpks9W");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
