--- a/index.html
+++ b/index.html
@@ -526,77 +526,59 @@
     }
 
     /* === レスポンシブ ========================= */
-    @media (max-width: 820px) {
-  section {
-    padding: 56px 0;
+    
+@media (max-width: 540px) {
+  .header-inner {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 6px;
   }
 
-  /* ★ここを追加 */
-  .hero {
-    padding-top: 0;
-    min-height: 60vh;
-  }
-
-  .hero::before {
-    background-position: center top;
-  }
-
-  .hero-inner,
-  .youtube-wrapper,
-  .social-wrapper {
-    grid-template-columns: 1fr;
-  }
-
-  .hero-visual {
-    max-width: 420px;
-    margin: 24px auto 0;
-    width: 100%;
+  .logo img {
+    height: 64px;
   }
 
   nav ul {
-    gap: 12px;
-    font-size: 0.8rem;
+    justify-content: flex-start;
+  }
+
+  .hero-title {
+    letter-spacing: 0.18em;
+    font-size: 2.2rem;
+  }
+
+  .hero-meta {
+    font-size: 0.75rem;
+  }
+
+  .footer-inner {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .social-buttons {
+    gap: 10px;
+  }
+
+  .social-btn {
+    font-size: 0.75rem;
+    padding: 8px 14px;
+  }
+
+  /* === スマホ用ヒーロー背景差し替え === */
+  .hero::before {
+    background-image: url("https://i.imgur.com/LwAhXjT.jpeg");
+    background-size: cover;
+    background-position: center top;
+  }
+
+  .hero {
+    min-height: 75vh;
+    padding-top: 0;
   }
 }
+重要チェック（ここだけ注
 
-    @media (max-width: 540px) {
-      .header-inner {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 6px;
-      }
-
-      .logo img {
-        height: 64px;
-      }
-
-      nav ul {
-        justify-content: flex-start;
-      }
-
-      .hero-title {
-        letter-spacing: 0.18em;
-        font-size: 2.2rem;
-      }
-
-      .hero-meta {
-        font-size: 0.75rem;
-      }
-
-      .footer-inner {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .social-buttons {
-        gap: 10px;
-      }
-
-      .social-btn {
-        font-size: 0.75rem;
-        padding: 8px 14px;
-      }
-    }
   </style>
 </head>
 <body id="top">
