--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background-image: url("https://i.imgur.com/f9K0X9v.png");
+      background-image: url("https://i.imgur.com/GV3Rikm.jpeg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
