--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
           <h1 class="hero-title">Emdays</h1>
           <p class="hero-lead">
             Emdays<br>
-            Future Deathcore
+            Future Metal
           </p>
           <div class="hero-meta">
             <span>Genre : Metal</span>
