--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
         <div class="youtube-wrapper">
           <div class="youtube-embed">
             <iframe
-              src="https://youtu.be/0tpXYh_a2Iw"
+              src="https://youtu.be/0tpXYh_a2Iw?si=jA68Fs0gVPOfmsIo"
               title="Emdays - Overdose (Official Video)"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
